# CloakFund

./: .env.example  .gitignore  AGENTS.md  PROJECT_SUBMISSION.md  README.md  cloakfund_cli.sh  package-lock.json  package.json
.github/workflows/: rust-tests.yml  rust.yml
cache/: solidity-files-cache.json
contracts/src/: CloakResolver.sol  PrivacyPool.sol
convex/: README.md  deposits.ts  http.ts  notes.ts  paylinks.ts  schema.ts  sweeps.ts  tsconfig.json  users.ts
convex/_generated/: api.d.ts
docs/: API.md  ARCHITECTURE.md  BITGO_FLOW.md  CCIP_READ_MODE.md  CONTRACTS.md  CRYPTOGRAPHY.md  CRYPTO_TEST_VECTORS.md  DATA_FLOW.md  DEMO.md  ENS_CCIP_READ_RESEARCH.md  FUTURE_WORK.md  IMPLEMENTATION_LOG.md  PHASES.md  PHASE_2_ARCHITECTURE_REDESIGN.md  PHASE_STATUS.md  PROBLEM.md  README.md  RUN_INSTRUCTIONS.md  RUST_BACKEND_DESIGN.md  SECRETS_SETUP.md  SECURITY.md  SOLUTION.md  SPONSOR_INTEGRATIONS.md  SYSTEM-DESIGN.md  THREAT_MODEL.md  VISION.md  test_wallets.md
frontend/: app.js  index.html  style.css
rust-backend/: Cargo.toml
rust-backend/src/: api.rs  bitgo_client.rs  ccip.rs  config.rs  consolidator.rs  convex_client.rs  lib.rs  main.rs  models.rs  privacy_pool.rs  stealth.rs  sweeper.rs  watcher.rs
scripts/: send_eth.mjs  sweeper_test.sh  watcher_test.sh
