[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
convex = "0.10.3"
ethers = { version = "2", features = ["ws", "rustls"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdh"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
dotenvy = "0.15.7"
